# litestar-playground

./: README.md  justfile  pyproject.toml
src/app/: __main__.py  asgi.py  config.py  router.py  server.py
src/app/lib/: rpc.py
tests/unit/: test_lib_rpc.py
tooling/: certificate.py
