[project]
name = "litestar-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "aiosqlite>=0.21.0",
 "argparse>=1.4.0",
 "click>=8.2.1",
 "litestar[standard]>=2.16.0",
 "structlog>=25.4.0",
]

[dependency-groups]
dev = []
tooling = [
    "cryptography>=45.0.3",
]
tests = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
]

[project.scripts]
app = "app.__main__:run_cli"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "nodeenv"]

[tool.hatch.build]
dev-mode-dirs = ["src/"]
packages = ["src/app"]

[tool.uv]
default-groups = ["dev", "tests", "tooling"]


